src/test/ui/type-alias-impl-trait/multiple-def-uses-in-one-fn-infer.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/multiple-def-uses-in-one-fn-infer.rs:10:5
   |
LL |     (42_i64, 60)
   |     ^^^^^^^^^^^^ expected `i64`, got `i32`
   |
note: previous use here
  --> $DIR/multiple-def-uses-in-one-fn-infer.rs:10:5
   |
LL |     (42_i64, 60)
   |     ^^^^^^^^^^^^

error: aborting due to previous error

